fix an issue with alignment and a missing border

--- a/styles/custom/usa-overrides.scss
+++ b/styles/custom/usa-overrides.scss
@@ -10,3 +10,16 @@
     }
   }
 }
+
+.usa-header--basic .usa-nav-container {
+  align-items: center;
+}
+
+.usa-layout-docs__main {
+  width: 100%;
+  border-top: 1px solid #dfe1e2;
+
+  main#main-content {
+    width: 100%;
+  }
+}
