--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,11 +9,3 @@
 @forward "uswds";
 
 @import "custom/screen";
-
-.usa-layout-docs__main {
-  width: 100%;
-
-  main#main-content {
-    width: 100%;
-  }
-}
